# libacirc

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: _acirc.h  acirc.c  acirc.h  degree.c  depth.c  eval.c  map.c  map.h  ngates.c  nmuls.c  parse.y  scan.l  storage.c  storage.h
t/: test_circ.c
t/circuits/: simple.acirc  test.acirc
